fix: gaps between inputs changed

--- a/css/common.blocks/flex.css
+++ b/css/common.blocks/flex.css
@@ -103,6 +103,10 @@
         gap: var(--spacing-l);
     }
 
+    .flex_gap_xl_bp_s {
+        gap: var(--spacing-xl);
+    }
+
     .flex_gap_xxl_bp_s {
         gap: var(--spacing-xxl);
     }
