--- a/css/pages/jobs.css
+++ b/css/pages/jobs.css
@@ -18,6 +18,13 @@
 .job-card__logo-section {
     width: 64px;
     padding: var(--spacing-l);
+    position: relative;
+}
+
+.job-card__logo-section .avatar {
+    position: absolute;
+    top: var(--spacing-l);
+    left: var(--spacing-l);
 }
 
 .job-card__content-section {
